// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea component sanity matches default snapshot 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<textarea
  class="c0"
  color="copyColor"
  font-family="sansSerif"
  font-size="1rem"
  height="auto"
/>
`;

exports[`Textarea component sanity matches themed snapshot 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    color="copyColor"
    font-family="sansSerif"
    font-size="1rem"
    height="auto"
  />
</div>
`;
